--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "leet"
+name = "leet-daily"
 version = "0.1.0"
 description = ""
 authors = ["Jobin Nelson <jobinnelson369@gmail.com>"]
@@ -11,8 +11,22 @@ httpx = "^0.25.0"
 selectolax = "^0.3.17"
 
 [tool.poetry.scripts]
-leet = "leet.main:main"
+leet-daily = "leet_daily.main:main"
 
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.5.0"
+
+[tool.isort]
+multi_line_output = 5
+line_length = 119
+
+[tool.yapf]
+based_on_style = "google"
+align_closing_bracket_with_visual_indent = true
+coalesce_brackets = true
+column_limit = 119
+dedent_closing_brackets = true
 
 [build-system]
 requires = ["poetry-core"]
